[Project Description] Note that I do not use the entire KLCP1

--- a/Project Description/Latex/Klingon Morphological Analyzer - Project Description - Matthew Thomas.tex
+++ b/Project Description/Latex/Klingon Morphological Analyzer - Project Description - Matthew Thomas.tex
@@ -56,7 +56,7 @@ The morphological analyzer FST consists of two files; a lexc file and a foma fil
 
 \subsection{\textit{lexc} file}
 
-The lexc file describes Klingon morphology and contains the basic set of Klingon lexical entries. I use the KLCP1, which are the 502 basic words of first level of KLI's ``Klingon Language Certification Program''~\cite{Zrajm:12}. Each lexical entry contains the stem and the english meaning on the upper-side (analysis) of the FST.
+The lexc file describes Klingon morphology and contains the basic set of Klingon lexical entries. I use A-P entires of the KLCP1, which are the 502 basic words of first level of KLI's ``Klingon Language Certification Program''~\cite{Zrajm:12}. Each lexical entry contains the stem and the english meaning on the upper-side (analysis) of the FST.
 
 Beesley and Karttunen~\shortcite{BeesleyKarttunen:02} flag diacritics are used to restrict the stem and affix combinations according to the grammar description.
 
