Fixes for bibliography

--- a/Project Description/Latex/mybibfile.bib
+++ b/Project Description/Latex/mybibfile.bib
@@ -17,21 +17,21 @@
 }
 
 @misc{KLI:Development,
-  author = {The Klingon Language Institute},
+  publisher = {The Klingon Language Institute},
   title = {{Development and Use of the Klingon Language}},
   howpublished = {\url{http://www.kli.org/about-klingon/klingon-history/}},
   note = {Accessed: 2015-12-15}
 }
 
 @misc{KLI:Sounds,
-  author = {The Klingon Language Institute},
+  publisher = {The Klingon Language Institute},
   title = {{The Sounds of Klingon}},
   howpublished = {\url{http://www.speakklingon.info/about-klingon/sounds-of-klingon/}},
   note = {Accessed: 2015-12-15}
 }
 
 @misc{KLI:Canonical,
-  author = {The Klingon Language Institute},
+  publisher = {The Klingon Language Institute},
   title = {{Canonical Sources}},
   howpublished = {\url{http://www.kli.org/wiki/Canonical_sources}},
   note = {Accessed: 2015-12-15}
@@ -65,7 +65,7 @@
   author = {Zrajm},
   title = {{Klingon Word Database} 1st edition.},
   howpublished = {\url{http://mashable.com/2013/05/18/klingon-star-trek/}},
-  publisher="Klingonska Akademien"
-  year = {2012},
+  publisher="Klingonska Akademien",
+  year="2012",
   note = {Accessed: 2015-12-15}
 }
